<resources>
    <string name="app_name">CTFLY</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_with_google">Login with google</string>
    <string name="login_with_github">Login with github</string>
    <string name="login">Log in</string>
    <string name="logo_login">Logo login</string>
    <string name="signup">Sign up</string>
    <string name="email">E-mail</string>
    <string name="conferma_password">Conferma password</string>
    <string name="error">error</string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>

</resources>
