<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:contentDescription="@string/error"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/email_input"
        app:layout_constraintEnd_toStartOf="@+id/email_input"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email_input"
        app:layout_constraintVertical_bias="0.62"
        app:srcCompat="@android:drawable/ic_delete" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm_input" />

    <EditText
        android:id="@+id/password_confirm_input"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/conferma_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <ImageButton
        android:id="@+id/login_with_google_button"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/login_with_google"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/goto_login"
        app:layout_constraintEnd_toStartOf="@+id/login_with_github_button"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        app:srcCompat="@drawable/ic_google_signup" />

    <ImageButton
        android:id="@+id/login_with_twitter_button"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/login_with_google"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/goto_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toEndOf="@+id/login_with_github_button"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        app:srcCompat="@mipmap/ic_twitter_foreground" />

    <ImageButton
        android:id="@+id/login_with_github_button"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/login_with_github"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/goto_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        app:srcCompat="@drawable/ic_github_" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded_button_blue"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="#FCF9F9"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:radius="20dp"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="141dp"
        android:contentDescription="@string/logo_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        app:srcCompat="@mipmap/ic_logo_min_foreground" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:contentDescription="@string/error"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/password_input"
        app:layout_constraintEnd_toStartOf="@+id/password_input"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username_input"
        app:layout_constraintVertical_bias="0.65999997"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:contentDescription="@string/error"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toStartOf="@+id/password_confirm_input"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_confirm_input"
        app:layout_constraintVertical_bias="0.65"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:contentDescription="@string/error"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/password_confirm_input"
        app:layout_constraintEnd_toStartOf="@+id/password_input"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_input"
        app:layout_constraintVertical_bias="0.65999997"
        app:srcCompat="@android:drawable/ic_delete" />

    <TextView
        android:id="@+id/goto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contextClickable="true"
        android:text="@string/already_have_an_account"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        app:layout_constraintVertical_bias="0.691" />

    <TextView
        android:id="@+id/passwordErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#ff0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />


</androidx.constraintlayout.widget.ConstraintLayout>