<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageButton
        android:id="@+id/login_with_google_button"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/login_with_google"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_with_github_button"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        app:layout_constraintVertical_bias="0.145"
        app:srcCompat="@drawable/ic_google_signup" />

    <ImageButton
        android:id="@+id/login_with_twitter_button"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/login_with_google"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toEndOf="@+id/login_with_github_button"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        app:layout_constraintVertical_bias="0.145"
        app:srcCompat="@mipmap/ic_twitter_foreground" />

    <ImageButton
        android:id="@+id/login_with_github_button"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/login_with_github"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        app:layout_constraintVertical_bias="0.145"
        app:srcCompat="@drawable/ic_github_" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded_button_blue"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FCF9F9"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:drawableRight="@android:drawable/ic_lock_lock"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:radius="20dp"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/credenzErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Le credenziali sono errate!"
        android:textColor="#ff0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="282dp"
        android:layout_height="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089"
        app:srcCompat="@mipmap/ic_logo_min_foreground"
        android:contentDescription="@string/logo_login" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/password_input"
        app:layout_constraintEnd_toStartOf="@+id/password_input"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username_input"
        app:srcCompat="@android:drawable/ic_delete"
        android:contentDescription="@string/error" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="106dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="308dp" />

    <ProgressBar
        android:id="@+id/loadingLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/login_with_github_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button" />


</androidx.constraintlayout.widget.ConstraintLayout>